@@ -72,6 +72,8 @@ Core - General
   - Content pages now have the ability to control whether or not the page wants any more children.
   - The TemplateType class now has a help callback to optionally allow retrieving help for templates of a particular type
   - Permissions are now grouped logically by module/originator in ChangeGroupPermissions.
+  - Now use HTTPS for the latest version check
+  - Adds the public_cache_url config entry,  and make sure that the css_url uses that by default.
 
   - #11080 - Parameter $adding in GetContentBlockFieldInput always FALSE.
   - #11093 - Bad error message in jquery.cmsms_autorefresh.js.
@@ -163,6 +165,7 @@ ModuleManager
   - Write a confirmation form for uninstalling a module that displays the UninstallPreMessage or uses a default.
   - Now don't allow disabling / uninstalling myself.
   - Don't hide the upgrades tab when there are no upgrades, but show the number of upgrades in the tab title instead.
+  - Now use HTTPS for requests to ModuleRepository
 
 
 Version 2.1.6 - Spanish Wells
